# spinkube-faas

./: .gitignore  README.md  bench-actions.json  executor.yaml  install_prometheus.sh  k3s-bootstrap.sh  otel-servicemonitor.yaml  otel-values-spanmetrics.yaml  publish-spin-images.sh  register_spinkube.sh  rejoin_node.sh  setup_server.sh  setup_worker.sh  spinappexecutor-bench.yaml
spin-actions/bench-aes/: Cargo.toml  spin.toml
spin-actions/bench-aes/src/: lib.rs
spin-actions/bench-chameleon/: Cargo.toml  spin.toml
spin-actions/bench-chameleon/src/: lib.rs
spin-actions/bench-disk-rand/: Cargo.toml  spin.toml
spin-actions/bench-disk-rand/src/: lib.rs
spin-actions/bench-disk-seq/: Cargo.toml  spin.toml
spin-actions/bench-disk-seq/src/: lib.rs
spin-actions/bench-dp/: Cargo.toml  spin.toml
spin-actions/bench-dp/src/: lib.rs
spin-actions/bench-float/: Cargo.toml  spin.toml
spin-actions/bench-float/src/: lib.rs
spin-actions/bench-gzip/: Cargo.toml  spin.toml
spin-actions/bench-gzip/src/: lib.rs
spin-actions/bench-json/: Cargo.toml  spin.toml
spin-actions/bench-json/src/: lib.rs
