[package]
name = "bench-aes"
authors = ["tkhadse2"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes = "0.8.4"
anyhow = "1"
ctr = "0.9.2"
getrandom = "0.2.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spin-sdk = "5.2.0"

[workspace]
