[package]
name = "bench-chameleon"
authors = ["tkhadse2"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
spin-sdk = "5.2.0"

[workspace]
